Add redis dependencies

--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,8 @@ repositories {
 
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
-	compile("org.springframework.boot:spring-boot-starter-actuator")
+	compile('org.springframework.boot:spring-boot-starter-actuator')
+	compile('org.springframework.data:spring-data-redis:2.0.5.RELEASE')
+	compile('redis.clients:jedis:2.9.0')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
