--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
 	ext {
-		springBootVersion = '2.0.1.RELEASE'
+		springBootVersion = '2.0.3.RELEASE'
 	}
 	repositories {
 		mavenCentral()
@@ -16,7 +16,7 @@ apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
 group = 'com.redtrade.services'
-version = '0.0.1-SNAPSHOT'
+version = '1.0'
 sourceCompatibility = 1.8
 
 repositories {
@@ -24,12 +24,30 @@ repositories {
 }
 
 dependencies {
-	compile group: "de.flapdoodle.embed", name: "de.flapdoodle.embed.mongo", version: "2.0.1"
+	// https://mvnrepository.com/artifact/commons-io/commons-io
+//	compile group: 'commons-io', name: 'commons-io', version: '2.6'
+
+//	compile 'com.fasterxml.jackson.core:jackson-databind'
+    compile group: 'ch.qos.logback', name: 'logback-core', version: '1.2.3'
+	compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
+//	compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
+	compile group: 'net.logstash.logback', name: 'logstash-logback-encoder', version: '5.1'
+//	compile 'ch.qos.logback.contrib:logback-json-classic:0.1.5'
+
+//    compile 'ch.qos.logback:logback-classic:1.3.0-alpha4'
+//	compile 'com.fasterxml.jackson.core:jackson-databind:2.9.6'
+//    compile 'ch.qos.logback.contrib:logback-json-classic:0.1.5'
+//	compile 'ch.qos.logback.contrib:logback-jackson:0.1.5'
+
+	testCompileOnly group: "de.flapdoodle.embed", name: "de.flapdoodle.embed.mongo", version: "2.0.1"
 	testCompile('org.springframework.boot:spring-boot-starter-test')
-    compileOnly "org.projectlombok:lombok:1.16.16"
 //	compile('org.springframework.boot:spring-boot-starter-data-jpa')
-	compile('org.springframework.boot:spring-boot-starter-actuator')
-//	compile('org.springframework.boot:spring-boot-starter-data-redis')
 	compile('org.springframework.boot:spring-boot-starter-web')
+//	compile 'org.springframework.data:spring-data-rest-webmvc'
+    compile "org.projectlombok:lombok"
+//	runtime('org.postgresql:postgresql')
+//	compile('org.springframework.boot:spring-boot-starter-data-jpa')
+//	compile('org.springframework.boot:spring-boot-starter-actuator')
+//	compile('org.springframework.boot:spring-boot-starter-data-redis')
 	compile('org.springframework.data:spring-data-mongodb')
 }
